notebook: 공통설정 entry_start_time 숫자 계산 오류 조치

--- a/config/strategies.yaml
+++ b/config/strategies.yaml
@@ -18,7 +18,7 @@ breakout:
   vol_k: 2
 common:
   cross_lookback: 3
-  entry_start_time: 91000
+  entry_start_time: '091000'
   max_positions: 10
   risk_pct: 0.03
   target_weight: 0.1
