home: 엉망진창 TPS 와 초과오류 그리고 버그리포트

--- a/config/strategies.yaml
+++ b/config/strategies.yaml
@@ -49,6 +49,7 @@ system:
     chat_id: '7692999971'
     enable_system_alert: false
     enable_trade_alert: false
+  tps_limit: 2.0
   tps_server_url: https://tps.bhsong.org
   universe: []
   use_auto_scanner: true
