--- a/web/static/manifest.json
+++ b/web/static/manifest.json
@@ -11,13 +11,13 @@
       "src": "/static/logo.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "/static/logo.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "/static/logo.png",
