--- a/web/static/manifest.json
+++ b/web/static/manifest.json
@@ -2,28 +2,34 @@
   "name": "Anti-Stock Trading Bot",
   "short_name": "Anti-Stock",
   "description": "Powerful agentic AI stock trading assistant",
-  "start_url": "/",
+  "start_url": "/?pwa=true",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "icons": [
     {
-      "src": "/static/logo.png",
+      "src": "/static/logo.png?v=3",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "/static/logo.png",
+      "src": "/static/logo.png?v=3",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "/static/logo.png",
-      "sizes": "1024x1024",
+      "src": "/static/logo.png?v=3",
+      "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
+    },
+    {
+      "src": "/static/logo.png?v=3",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
