--- a/web/static/manifest.json
+++ b/web/static/manifest.json
@@ -1,32 +1,32 @@
 {
   "name": "Anti-Stock Trading Bot",
   "short_name": "Anti-Stock",
-  "description": "Powerful agentic AI stock trading assistant",
+  "description": "AI-powered strategic trading assistant",
   "start_url": "/?pwa=true",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "icons": [
     {
-      "src": "/static/logo.png?v=3",
+      "src": "/static/logo.png?v=90",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/static/logo.png?v=3",
+      "src": "/static/logo.png?v=90",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/static/logo.png?v=3",
+      "src": "/static/logo.png?v=90",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/static/logo.png?v=3",
+      "src": "/static/logo.png?v=90",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
