home: 전략실험실 조건 설정 방식 개선

--- a/labs/lab1/lab1_cond.yaml
+++ b/labs/lab1/lab1_cond.yaml
@@ -1,21 +1,16 @@
-MySandboxStrategy:
+이동평균 추세 추종:
   variables:
     ma_short: 5
     ma_long: 20
     stop_loss_pct: 2
     take_profit_pct: 5
-  monitoring_exclusions:
-  - desc: 거래량이 10,000주 미만인 종목 제외
-    code: volume < 20000
-  - desc: 현재가가 1,000원 미만인 동전주 제외
-    code: price < 1000
+  watch_conditions:
+    desc: ' 현재가가 20일 이동평균가격 이상이고 전일거래량이 20일 평균거래량의 1.1배보다 크면서 20일선이 상승 중인 종목 감시'
+    code: (price >= ma_long) and (prev_volume > avg_volume_long * 1.1) and (ma_long
+      > prev_ma_long)
   entry_conditions:
-  - desc: 현재가가 단기 이평선(5일)을 돌파 (Golden Cross)
-    code: price > ma_short and prev_price <= prev_ma_short
-  - desc: 현재가가 장기 이평선(20일) 위에 위치
-    code: price > ma_long
+    desc: 현재가가 단기 이평선 돌파(Golden Cross) AND 장기 이평선 위
+    code: (price > ma_short and prev_price <= prev_ma_short) and (price > ma_long)
   exit_conditions:
-  - desc: 손실이 제한폭(2%)을 초과하면 매도 (Stop Loss)
-    code: pnl_pct < -stop_loss_pct
-  - desc: 목표 수익률(5%) 도달 시 매도 (Take Profit)
-    code: pnl_pct > take_profit_pct
+    desc: 손실 제한(2%) 또는 목표 수익(5%) 달성 시 청산
+    code: (pnl_pct < -stop_loss_pct) or (pnl_pct > take_profit_pct)
